Fix Showcase’s gap in baseline
This gap should be the rouded value of `1.25^2 * 1rem`.

--- a/src/css/component/showcase.css
+++ b/src/css/component/showcase.css
@@ -11,7 +11,7 @@
 	list-style-type: none;
 	margin-bottom: 1.75rem;
 	margin-block-end: var(--space-large);
-	margin-top: 0;
+	margin-top: 0.25rem;
 	margin-block-start: var(--space-large);
 	padding-left: 0;
 	row-gap: var(--space-default);
@@ -27,7 +27,7 @@
 	display: var(--display);
 	margin-right: 1rem;
 	margin-inline-end: var(--margin-inline-end);
-	margin-top: 1.75rem;
+	margin-top: 1.5rem;
 	margin-block-start: var(--margin-block-start);
 	max-width: 29%;
 	max-width: var(--max-width);
